--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,6 +1,7 @@
 {
   "recommendations": [
     "mtxr.sqltools",
-    "mtxr.sqltools-driver-sqlite"
+    "mtxr.sqltools-driver-sqlite",
+    "ms-azuretools.vscode-docker"
   ]
 }
